# gpx_viz

./: Cargo.toml  LICENSE  README.md
assets/: track.gpx
src/: camera.rs  config.rs  main.rs  ui.rs
src/geo/: coordinates.rs  gpx.rs  mod.rs  terrain.rs
src/rendering/: mod.rs  skybox.rs  terrain_mesh.rs  track.rs
src/srtm/: cache.rs  downloader.rs  mod.rs  parser.rs
