[package]
name = "gpx_viz"
version = "0.1.0"
edition = "2021"
authors = ["Jim Mattson <jsmattsonjr@gmail.com>"]
description = "A 3D visualization tool for GPX tracks with SRTM terrain data"

[dependencies]
# Bevy and plugins
bevy = { version = "0.15", features = ["dynamic_linking"] }
bevy_panorbit_camera = "0.23.0"  # For camera controls
bevy_atmosphere = "0.12.2"  # For skybox

# Geospatial libraries
gdal = { version = "0.17", features = ["bindgen"] }
gpx = "0.10.0"  # For parsing GPX files
geo = "0.29.3"  # For geographic calculations

# Networking and file handling
reqwest = { version = "0.12", features = ["blocking", "json"] }
zip = "2.2"  # For handling zipped SRTM files
futures = "0.3"  # For async operations
async-std = "1.13"  # For async file operations

# Utility
anyhow = "1.0"  # Error handling
thiserror = "2.0"  # Error definitions
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
